--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     <a-box id="marker-mainpathway3" width="0.1" height="0.5" length="0.5" color="orange" position="-3 3 -0.7" rotation="0 90 0"></a-box>
 
     <a-camera id="camera-frontdesk" class="camera" position="3 2 -3" active=true>
-      <a-cursor fuse="true" color="#2E3A87">
+      <a-cursor fuse=true color="#2E3A87">
     </a-camera>
 
-    <a-camera id="camera-mainpathway" class="camera" position="-4 2 -3" active=true>
-      <a-cursor fuse="true" color="#BADA55">
+    <a-camera id="camera-mainpathway" class="camera" position="-4 2 -3">
+      <a-cursor fuse=true color="#BADA55">
     </a-camera>
 
-    <a-camera id="camera-kitchen" class="camera" position="-12 2 -3" active=true>
-      <a-cursor fuse="true" color="#BADA55">
+    <a-camera id="camera-kitchen" class="camera" position="-12 2 -3">
+      <a-cursor fuse=true color="#BADA55">
     </a-camera>
 
-    <a-camera id="camera-silentzone" class="camera" position="-4 2 -25" active=true>
-      <a-cursor fuse="true" color="red">
+    <a-camera id="camera-silentzone" class="camera" position="-4 2 -25">
+      <a-cursor fuse=true color="red">
     </a-camera>
 
   </a-scene>
