increased marker size

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>My App</title>
-  <script src="bundle.min.js"></script>
+  <script src="bundle.js"></script>
 </head>
 
 <body>
@@ -17,8 +17,8 @@
     <a-box id="marker-frontdesk" width="0.1" height="0.5" length="0.5" color="blue" position="-1.1 3 -1.7" rotation="0 0 0"></a-box>
     <a-box id="marker-kitchen" width="0.1" height="0.5" length="0.5" color="green" position="-8 3 -1.7" rotation="0 0 0"></a-box>
     <a-box id="marker-mainpathway2" width="0.1" height="0.5" length="0.5" color="orange" position="-8.1 3 -1.7" rotation="0 0 0"></a-box>
-    <a-box id="marker-silentzone" width="0.1" height="0.5" length="0.5" color="red" position="-1.1 3 -25" rotation="0 90 0"></a-box>
-    <a-box id="marker-mainpathway3" width="0.1" height="0.5" length="0.5" color="orange" position="-3 3 -0.7" rotation="0 90 0"></a-box>
+    <a-box id="marker-silentzone" width="0.1" height="1.4" length="1.4" color="red" position="-1.1 3 -25" rotation="0 90 0"></a-box>
+    <a-box id="marker-mainpathway3" width="0.1" height="1" length="1" color="orange" position="-3 3 -0.7" rotation="0 90 0"></a-box>
 
     <a-camera id="camera-frontdesk" class="camera" position="3 2 -3" active=true>
       <a-cursor fuse=true color="#2E3A87">
