--- a/index.html
+++ b/index.html
@@ -1,43 +1,29 @@
 <html>
 
 <head>
-  <title>My App</title>
-  <script src="bundle.min.js"></script>
+    <title>My App</title>
+    <script src="bundle.min.js"></script>
 </head>
 
 <body>
-  <a-scene>
-    <a-assets>
-    </a-assets>
-    <a-entity obj-loader="src: url(./mdl.obj);
-                             mtl: url(./mdl.mtl);" shadow="cast: true; receive: true">
-    </a-entity>
+    <a-scene id="#scene">
+        <a-assets>
+            <a-asset-item id="tree-obj" src="./models/mdl/mdl.obj"></a-asset-item>
+            <a-asset-item id="tree-mtl" src="./models/mdl/mdl.mtl"></a-asset-item>
+        </a-assets>
 
-    <a-box id="marker-mainpathway" width="0.1" height="0.5" length="0.5" color="orange" position="-1 3 -1.7" rotation="0 0 0"></a-box>
-    <a-box id="marker-frontdesk" width="0.1" height="0.5" length="0.5" color="blue" position="-1.1 3 -1.7" rotation="0 0 0"></a-box>
-    <a-box id="marker-kitchen" width="0.1" height="0.5" length="0.5" color="green" position="-8 3 -1.7" rotation="0 0 0"></a-box>
-    <a-box id="marker-mainpathway2" width="0.1" height="0.5" length="0.5" color="orange" position="-8.1 3 -1.7" rotation="0 0 0"></a-box>
-    <a-box id="marker-silentzone" width="0.1" height="1.4" length="1.4" color="red" position="-1.1 3 -25" rotation="0 90 0"></a-box>
-    <a-box id="marker-mainpathway3" width="0.1" height="1" length="1" color="orange" position="-3 3 -0.7" rotation="0 90 0"></a-box>
+        <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl"></a-entity>
 
-    <a-camera id="camera-frontdesk" class="camera" position="3 2 -3" active=true>
-      <a-cursor fuse=true color="#2E3A87">
-    </a-camera>
+        <a-entity id="arrow" class="clickable" geometry="primitive: cylinder; height: 0.1; radius: 2; openEnded: false" rotation="0 0 0" position="3 0 -3" material="color: lightblue; shader: flat"></a-entity>
 
-    <a-camera id="camera-mainpathway" class="camera" position="-4 2 -3">
-      <a-cursor fuse=true color="#BADA55">
-    </a-camera>
+        <a-entity id="camera" camera look-controls wasd-controls position="3 2 -3">
+            <a-entity cursor="fuse: true; timeout: 500" raycaster="far: 20; interval: 1000; objects: .clickable" position="0 0 -1.8" scale="0.1 0.1 0.1" geometry="primitive: ring;" material=" color: blue; shader: flat ">
+                <!-- <a-animation begin="cursor-click " easing="ease-in " attribute="scale " fill="backwards " from="0.1 0.1 0.1 " to="0.2 0.2 0.2 "></a-animation>
+                <a-animation begin="cursor-fusing " easing="ease-in " attribute="scale " fill="forwards " from="0.2 0.2 0.2 " to="0.1 0.1 0.1 "></a-animation> -->
+            </a-entity>
+        </a-entity>
 
-    <a-camera id="camera-kitchen" class="camera" position="-12 2 -3">
-      <a-cursor fuse=true color="#BADA55">
-    </a-camera>
-
-    <a-camera id="camera-silentzone" class="camera" position="-4 2 -25">
-      <a-cursor fuse=true color="red">
-    </a-camera>
-
-  </a-scene>
-
+    </a-scene>
 </body>
 
 </html>
